ui: fix alignment of bar chart and slider
* ref: cern-sis/issues-scoap3#252

--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -414,6 +414,11 @@ a {
   cursor: pointer;
 }
 
+.search-facets-facet .skeleton-data rect:hover {
+  stroke: #e3eaee !important;
+  fill: #e3eaee !important;
+}
+
 .search-facets-facet .ant-btn {
   background-color: #337ab7;
   padding: 5px 10px;
